--- a/workFlowApp/myflowapp/src/index.css
+++ b/workFlowApp/myflowapp/src/index.css
@@ -1,3 +1,6 @@
+html{
+  min-height: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,8 +8,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
+form{
+  padding: 20px;
+  margin-top: 60px;
+  border: 2px solid black;
+  border-radius: 10px;
 
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
