--- a/workFlowApp/myflowapp/src/index.css
+++ b/workFlowApp/myflowapp/src/index.css
@@ -15,7 +15,7 @@ form{
   margin-top: 60px;
   border: 2px solid black;
   border-radius: 10px;
-
+  height: 100%;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
